--- a/randomquotemachine/main.css
+++ b/randomquotemachine/main.css
@@ -1,2 +1,2 @@
-body{background-color:#2E1437;background:-webkit-linear-gradient(#683A5E, #2E1437);background:-o-linear-gradient(#683A5E, #2E1437);background:-moz-linear-gradient(#683A5E, #2E1437);background:linear-gradient(#683A5E, #2E1437)}.button_gen{margin-top:50px;margin-bottom:100px}
+#button_gen{margin:10px auto}#quote{padding:30px;box-shadow:0px 1px 20px 0px #777}
 /*# sourceMappingURL=main.css.map */
