Weather app works, needs polish

--- a/localweather/main.css
+++ b/localweather/main.css
@@ -1,2 +1,2 @@
-#button_gen{color:white;background-color:#3AB09E;border:thin;border-radius:1px}#button_gen:hover{color:#3AB09E;background-color:white;font-weight:800;font-size:15px}#button_gen:active,#button_gen:focus{outline:0}.buttons_wrapper{margin-top:20px;display:block}#button_tweet{width:30px;margin-right:5px}#quote{padding:30px;box-shadow:0px 1px 20px 0px #777;background-color:#3AB09E;color:white;border-radius:1px}#quote_author{margin-bottom:10px;font-family:"Coventry Garden NF", "Nickelodeon NF", "Antique Book Cover", "Ubuntu";font-size:40px}
+body{background-color:blue}.container{color:white}
 /*# sourceMappingURL=main.css.map */
