--- a/localweather/main.scss
+++ b/localweather/main.scss
@@ -8,3 +8,25 @@ body
 {
   color: white;
 }
+
+#weather_box
+{
+  border: 1px solid white;
+  box-shadow: 0 0 1px 2px grey;
+  //padding-left: 2px;
+  text-align:center;
+}
+
+#temperature_f, #temperature_c
+{
+  
+  &:hover
+  {
+    cursor: pointer;
+  }
+}
+
+//*
+//{
+//  color:red;
+//}
