--- a/front_end_libraries_projects/product_landing_page/styles.css
+++ b/front_end_libraries_projects/product_landing_page/styles.css
@@ -1,5 +1,45 @@
-h1
+ /* only smallest to medium */
+@media only screen and (max-width:767px) and (min-width:0px)
 {
-  color:orange;
-  
+
+}
+
+/* medium and up */
+@media only screen and(min-width:768px)
+{
+
+}
+
+
+/* large and up */
+@media only screen and (min-width: 992px)
+{
+
+
+}
+
+
+/* xl and up */
+@media only screen and(min-width:1200px)
+{
+
+}
+
+/* general rule */
+.flexbox-container
+{
+  display:flex;
+
+}
+
+.carousel-item > img
+{
+  max-width:700px;
+  max-height:300px;
+  display:none;
+}
+
+header
+{
+  display:flex;
 }
