--- a/front_end_libraries_projects/product_landing_page/styles.css
+++ b/front_end_libraries_projects/product_landing_page/styles.css
@@ -32,12 +32,23 @@
 
 }
 
-.carousel-item > img
+.carousel-item
+{
+  /* max-width:500px; */
+  max-height:300px;
+}
+
+.carousel-control-prev, .carousel-control-next, .carousel-caption
+{
+  background: rgba(0, 0, 0, 0.1);
+
+}
+
+/* .carousel-item img
 {
   max-width:700px;
   max-height:300px;
-  display:none;
-}
+} */
 
 header
 {
