--- a/front_end_libraries_projects/product_landing_page/styles.css
+++ b/front_end_libraries_projects/product_landing_page/styles.css
@@ -1,56 +1,2 @@
- /* only smallest to medium */
-@media only screen and (max-width:767px) and (min-width:0px)
-{
-
-}
-
-/* medium and up */
-@media only screen and(min-width:768px)
-{
-
-}
-
-
-/* large and up */
-@media only screen and (min-width: 992px)
-{
-
-
-}
-
-
-/* xl and up */
-@media only screen and(min-width:1200px)
-{
-
-}
-
-/* general rule */
-.flexbox-container
-{
-  display:flex;
-
-}
-
-.carousel-item
-{
-  /* max-width:500px; */
-  max-height:300px;
-}
-
-.carousel-control-prev, .carousel-control-next, .carousel-caption
-{
-  background: rgba(0, 0, 0, 0.1);
-
-}
-
-/* .carousel-item img
-{
-  max-width:700px;
-  max-height:300px;
-} */
-
-header
-{
-  display:flex;
-}
+@media only screen and (max-width: 767px) and (min-width: 0px){.carousel-item{height:300px}#header-img{height:75px}}@media only screen and (min-width: 768px){.carousel-item{height:300px}#header-img{height:75px}}#nav-bar{position:fixed;top:0;margin:0;padding:0;width:100%;z-index:10000;background-color:#161c60}#nav-bar a{color:#25bdd6}.flexbox-container{display:flex}.carousel-control-prev,.carousel-control-next,.carousel-caption{background:rgba(0,0,0,0.1)}header{display:flex}
+/*# sourceMappingURL=styles.css.map */
