--- a/front_end_libraries_projects/product_landing_page/styles.scss
+++ b/front_end_libraries_projects/product_landing_page/styles.scss
@@ -9,6 +9,10 @@
   {
     height:75px;
   }
+  #nav-bar img, #nav-bar a
+  {
+    margin:0;
+  }
 
 
 }
@@ -55,21 +59,27 @@
   // color:rgb(37, 189, 214);
   //
   background-color:rgb(22, 28, 96);
+  display:flex;
+  align-items: center;
+  align-content: space-between;
 
   a
   {
     color:#25bdd6;
-    
+
   }
 }
-
+header
+{
+ // display:flex;
+}
 
 /* general rule */
-.flexbox-container
-{
- display:flex;
-
-}
+// .flexbox-container
+// {
+//  display:flex;
+//
+// }
 
 
 
@@ -84,8 +94,3 @@
  max-width:700px;
  max-height:300px;
 } */
-
-header
-{
- display:flex;
-}
