--- a/product_landing_page/styles.css
+++ b/product_landing_page/styles.css
@@ -1,2 +1,44 @@
-@media only screen and (max-width: 767px) and (min-width: 0px){.carousel-item{height:300px}#header-img{height:75px}#nav-bar img,#nav-bar a{margin:0}}@media only screen and (min-width: 768px){.carousel-item{height:300px}#header-img{height:75px}}#nav-bar{position:fixed;top:0;margin:0;padding:0;width:100%;z-index:10000;background-color:#161c60;display:flex;align-items:center;align-content:space-between}#nav-bar a{color:#25bdd6}.carousel-control-prev,.carousel-control-next,.carousel-caption{background:rgba(0,0,0,0.1)}
+/* only smallest to medium */
+@media only screen and (max-width: 767px) and (min-width: 0px) {
+  .carousel-item {
+    height: 300px; }
+
+  #header-img {
+    height: 75px; }
+
+  #nav-bar img, #nav-bar a {
+    margin: 0; } }
+/* medium and up */
+@media only screen and (min-width: 768px) {
+  .carousel-item {
+    height: 300px; }
+
+  #header-img {
+    height: 75px; } }
+/* large and up */
+/* xl and up */
+#nav-bar {
+  position: fixed;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  z-index: 10000;
+  background-color: #161c60;
+  display: flex;
+  align-items: center;
+  align-content: space-between; }
+  #nav-bar a {
+    color: #25bdd6; }
+
+/* general rule */
+.carousel-control-prev, .carousel-control-next, .carousel-caption {
+  background: rgba(0, 0, 0, 0.1); }
+
+/* .carousel-item img
+{
+ max-width:700px;
+ max-height:300px;
+} */
+
 /*# sourceMappingURL=styles.css.map */
