--- a/technical_page/styles.css
+++ b/technical_page/styles.css
@@ -1,3 +1,8 @@
-
+pre {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  width: auto;
+  overflow: scroll;
+  padding: 11px; }
 
 /*# sourceMappingURL=styles.css.map */
