Updates for technical page

--- a/technical_page/styles.scss
+++ b/technical_page/styles.scss
@@ -33,11 +33,12 @@
 
 pre
 {
+  color:#e83e8c;
   // background-color:#EBEBE4;
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-
-  width:auto;
-  overflow:scroll;
-  padding:11px;
+  // background-color: #f5f5f5;
+  // border: 1px solid #ccc;
+  //
+  // width:auto;
+  // overflow:scroll;
+  // padding:11px;
 }
