--- a/technical_page/styles.css
+++ b/technical_page/styles.css
@@ -1,8 +1,4 @@
 pre {
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-  width: auto;
-  overflow: scroll;
-  padding: 11px; }
+  color: #e83e8c; }
 
 /*# sourceMappingURL=styles.css.map */
