--- a/technical_page/styles.scss
+++ b/technical_page/styles.scss
@@ -99,3 +99,7 @@ p, h1, h2, h3, h4, h5, h6, ol, ul, li, body, html
   background-color: #343a40;
   color:white;
 }
+h1, h2, h3, #navbar h5
+{
+  text-shadow: -1px -1px 2px rgba(150, 150, 150, 0.84);
+}
